tests/ui/non_exhaustive_match.stderr
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:11:11]
    │
 11 │     match x {
    │           ┬
    │           ╰─ pattern `B` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:15:11]
    │
 15 │     match Some(20) {
    │           ────┬───
    │               ╰───── pattern `Some(_)` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:27:11]
    │
 27 │     match Some(T::A) {
    │           ─────┬────
    │                ╰────── pattern `Some(B)` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:38:11]
    │
 38 │     match None {
    │           ──┬─
    │             ╰─── patterns `None` and `Some(A(B, A))` not covered
    ∙
────╯
